# PiCor

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: check_imports.py  code_quality.sh  install.sh  install_apt.sh  run.sh
source/: main.py  picor_runner.py  tools.py
source/agent/: __init__.py  models.py  picor.py
source/config/: picor.yaml
source/rlkit/envs/: proxy_env.py
source/rlkit/envs/wrappers/: __init__.py  normalized_box_env.py  task_onehot_env.py
