[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picor"
version = "0.1.0"
description = "Multi-task deep reinforcement learning with policy correction"
authors = [
    {name = "Fengshuo Bai", email = "changwindeg@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cython==0.29.21",
    "setuptools==59.5.0",
    "wheel==0.38.0",
    "torch>=1.12.0",
    "torchrl>=0.7.2",
    "tensordict>=0.7.0",
    "numpy>=1.23.0",
    "gym==0.19.0",
    "mujoco_py==2.0.2.8",
    "garage>=2022.1.0",
    "wandb>=0.21.0",
    "dotenv==0.9.9",
    "tensorboard==2.19.0"
]

[project.optional-dependencies]
dev = [
    "flake8>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 